--- a/src/views/moviesDelete.ejs
+++ b/src/views/moviesDelete.ejs
@@ -11,18 +11,18 @@
 <body>
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
-      </figure>
+    </figure>
     <h1>Estas seguro de querer borrar esta película: <%= Movie.title %>???</h1>
     <p>
-        <form action="/movies/delete/<%= Movie.id %>" method="POST">
+        <form action="/movies/delete/<%= Movie.id %>?_method=DELETE" method="POST">
             <br>
             <p> <button class="botonBorrar" type="submit">Borrar la Película</button>
-            
-            <a  class="botonVolver" href="/movies">Listado de Películas</a></p>
+
+                <a class="botonVolver" href="/movies">Listado de Películas</a></p>
 
         </form>
     </p>
-    
+
 </body>
 
 </html>
